--- a/task_manager/pom.xml
+++ b/task_manager/pom.xml
@@ -3,12 +3,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.grove.protobuf</groupId>
-    <artifactId>metricsmanager</artifactId>
+    <artifactId>taskmanager</artifactId>
     <version>0.0.1</version>
-    <name>metrics-manager-protobuf</name>
+    <name>task-manager-protobuf</name>
     <properties>
         <java.version>21</java.version>
-        <kotlin.version>1.9.22</kotlin.version>
+        <kotlin.version>1.9.23</kotlin.version>
         <maven.compiler.target>21</maven.compiler.target>
         <maven.compiler.source>21</maven.compiler.source>
         <protobuf.version>3.25.3</protobuf.version>
@@ -61,6 +61,4 @@
             </plugin>
         </plugins>
     </build>
-
-
 </project>
